Fix small thing regarding collections
Signed-off-by: Miguel Sama <miguel.sama@suse.com>